Bug 332187 - More settings doesn't open for auto hidden panel
Summary: More settings doesn't open for auto hidden panel
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: HI normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks: 328586
  Show dependency treegraph
 
Reported: 2014-03-15 16:49 UTC by Martin Flöser
Modified: 2014-03-27 11:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Flöser 2014-03-15 16:49:24 UTC
If one uses auto hidden panel it's no longer possible to open more settings and change back to a normal panel

Reproducible: Always

Steps to Reproduce:
1. Change to auto hide panel
2. let it hide
3. show it
4. open configuration
5. Click "More settings"
Actual Results:  
Nothing happens

Expected Results:  
More settings open
Comment 1 Bhushan Shah 2014-03-17 12:36:33 UTC
Funny one! I can confirm.
Comment 2 Marco Martin 2014-03-27 11:38:01 UTC
Git commit 5b4e2bff367d42379c7a41bcdc4ec383210917f5 by Marco Martin.
Committed on 27/03/2014 at 11:30.
Pushed by mart into branch 'master'.

when the controller is open, force panel mode

force to "Windows can cover" when the controller is open: it's the least dangerous mode.
this also disables the struts while the controller is open, this makes panel resize faster
Means the behavior of struts disabling is *INTENDED*
Related: bug 332592

M  +18   -0    src/shell/panelconfigview.cpp
M  +9    -0    src/shell/panelconfigview.h
M  +1    -0    src/shell/panelview.cpp
M  +3    -1    src/shell/panelview.h

http://commits.kde.org/plasma-framework/5b4e2bff367d42379c7a41bcdc4ec383210917f5