when the controller is open, force panel mode

force to "Windows can cover" when the controller is open: it's the least dangerous mode.
this also disables the struts while the controller is open, this makes panel resize faster
Means the behavior of struts disabling is *INTENDED*
BUG:332187
BUG:332592