panelview.h
@@ -20,10 +20,12 @@
 #define PANELVIEW_H
 
 #include <view.h>
-#include "panelconfigview.h"
 #include <QtCore/qpointer.h>
 #include <Plasma/Theme>
 #include <QTimer>
+
+
+#include <configview.h>
 
 class ShellCorona;
 
